Fixed bug where footer would overlap content sometimes

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,10 +1,5 @@
 body {
-   /* display: flex;
-   flex-direction: column;
    align-items: center;
-   justify-content: space-evenly;    */
-   display: grid;
-   place-items: center;
 }
 
 #title {
@@ -17,8 +12,8 @@ body {
 main {
    display: flex;
    flex-direction: column;
-   width: 60%;
-   margin-bottom: 10%;
+   justify-content: center;
+   max-width: 500px;
 }
 
 main .link-section {
@@ -27,4 +22,8 @@ main .link-section {
 
 main .link-section p {
    margin: 5px 0px;
+}
+
+#push {
+   margin-bottom: 30%;
 }
