--- a/styles/row-op-input.css
+++ b/styles/row-op-input.css
@@ -1,12 +1,3 @@
-body {
-   display: flex;
-   flex-direction: column;
-}
-
-nav {
-   position: relative;
-}
-
 /********* input *********/
 
 .matrix-input {
