--- a/styles/row-op.css
+++ b/styles/row-op.css
@@ -1,12 +1,3 @@
-body {
-   display: flex;
-   flex-direction: column;
-}
-
-nav {
-   position: relative;
-}
-
 /********* display matrix *********/
 
 #display {
